<resources>
    <string name="app_name">Expenses Tracker</string>
    <string name="expenses_tracker">Expenses Tracker</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="total">Total</string>
    <string name="latest">Latest</string>
    <string name="report">Report</string>
    <string name="analytics">Analytics</string>
    <string name="select">Select</string>
    <string name="expenses_list">Expenses List</string>
    <string name="add_item">Add Item</string>
    <string name="incomes_list">Incomes List</string>
    <string name="expenses_tracker_logo">Expenses Tracker Logo</string>
    <string name="enter_amount">Enter Amount.....</string>
    <string name="enter_note">Enter Note.....</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="_0_0">0.0</string>
    <string name="other">Other</string>
    <string name="clothes">Clothes</string>
    <string name="entertainment">Entertainment</string>
    <string name="utilities">Utilities</string>
    <string name="transport">Transport</string>
    <string name="grocery">Grocery</string>
    <string name="interest">Interest</string>
    <string name="savings">Savings</string>
    <string name="salary">Salary</string>
    <string name="social_benefits">Social Benefits</string>
    <string name="investments">Investments</string>
    <string name="dlt_message">Do you Really want to Delete this Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="image_deleted">Image Deleted</string>
    <string name="image_deleted_issue">Error Deleting Image</string>
    <string name="analytics_week_spending">This Weeks Spending</string>
    <string name="analytics_month_spending">This Months Spending</string>
    <string name="analytics_week_incomes">This Weeks Incomes</string>
    <string name="analytics_month_incomes">This Months Incomes</string>
    <string name="add_expense_item">Add an Expense Item</string>
    <string name="add_income_item">Add an Income!</string>

    <string name="amount_error">Amount is required</string>
    <string name="select_type">Select a Type</string>
    <string name="add_item_success">Item added successfully</string>
    <string name="expense_notification_title">Heads Up!</string>
    <string name="expense_notification_message1">Your expenses are close to your income</string>
    <string name="expense_notification_message2">Your expenses are more than your income</string>
    <string name="income_notification_message">You have good amount of savings this week</string>
    <string name="error_adding_item">Error Adding Item</string>
    <string name="select_item">Select Item</string>
    <string name="page_context_expenses">class com.example.expesestracker.ExpensesActivity</string>
    <string name="page_context_incomes">class com.example.expesestracker.IncomeActivity</string>




    <string-array name="items">
        <item>Select Item</item>
        <item>Transport</item>
        <item>Grocery</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>


    <string-array name="income_items">
        <item>Select Item</item>
        <item>Salary</item>
        <item>Savings</item>
        <item>Interest</item>
        <item>Benefits</item>
        <item>Investments</item>
        <item>Other</item>
    </string-array>

    <string-array name="analytics_choice">
        <item>Week Spending</item>
        <item>Month Spending</item>
        <item>Week Income</item>
        <item>Month Income</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an simple app widget That shows the total Income and total Expenses</string>

    <string name="notification_title">Just so you know</string>
    <string name="notification_body">We are out of food!</string>


    <string name="channel_name">Expenses Tracker Channel</string>
    <string name="channel_description">This is a notification channel to be used in Expenses Tracker App</string>

    <string name="schedule_channel_name">Expenses Tracker Schedule Channel</string>
    <string name="schedule_channel_description">This is a notification channel to be used in scheduling Notifications for Expenses Tracker App</string>
    <string name="receipts_list">Receipts List</string>

</resources>